--- a/Registration.html
+++ b/Registration.html
@@ -4,19 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom, #f2f2f2a6, #353434);
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 500px;
+            background-color: #fff;
+            padding: 40px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+
+        label {
+            font-weight: bold;
+            color: #333;
+        }
+
+        .form-control {
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 10px;
+        }
+
+        textarea.form-control {
+            resize: none;
+            height: 100px;
+        }
+
+        .btn {
+            padding: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .btn-primary {
+            background-color: #1d1c1d;
+            color: #fff;
+        }
+
+        .btn-primary:hover {
+            background-color: #d98b19;
+        }
+    </style>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <form id="contact-form">
-        <input type="text" id="name" placeholder="Your Name" required><br><br>
-        <input type="email" id="email" placeholder="Your Email" required><br><br>
-        <textarea id="message" placeholder="Your Message" required></textarea><br><br>
-        <button type="submit">Submit</button>
-    </form>
-
-    <div id="response"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/supabase.min.js"></script>
-    <script src="server.js"></script>
+    <div class="container">
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <div class="form-group">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" class="form-control" placeholder="Write your message here" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
+
+
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script>
+    const { createClient } = window.supabase
+    const supabase = createClient("https://giyguxvjrdntwnxtuqtp.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdpeWd1eHZqcmRudHdueHR1cXRwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzM5MzQxMzcsImV4cCI6MjA0OTUxMDEzN30.aPZrWx6wddWH0K8I-Vq95q67iG8LLBoWl2GmblZmN3w");
+
+    const form = document.querySelector('#contact-form')
+    form.addEventListener('submit', async (event) => {
+        event.preventDefault()
+
+        const formInputs = form.querySelectorAll('input, select, textarea')
+
+        let submission = {}
+
+        formInputs.forEach(element =>{
+            const { value, name } = element
+            if (value) {
+                submission[name] = value   
+            }
+        })
+
+        const { error , data } = await supabase.from('entries').insert([submission])
+
+        if (error){
+            alert('There was an error please try again')
+        } else {
+            alert('Thanks for contacting us')
+        }
+
+        formInputs.forEach(element => element.value = '')
+    })
+    </script>
 </html>
